--- a/gemlib/mt_gem.h.in
+++ b/gemlib/mt_gem.h.in
@@ -1198,6 +1198,9 @@ typedef  struct
 #define WF_MINXYWH		103 	/**<		 TODO (MagiC 6) */
 #define WF_INFOXYWH		104 	/**<		 TODO (MagiC 6.10) */
 #define WF_WIDGETS		200		/**< get/set actual positions of the slider widgets, see mt_wind_get() and mt_wind_set() */
+#define WF_230			230		/**< internally used by MyAES - doc TODO */
+#define WF_231			231		/**< internally used by MyAES - doc TODO */
+#define WF_TOPMOST		232		/**<     set actual window at TOPMOST level, see  mt_wind_set() */
 #define WF_WINX			22360	/**<		 TODO */
 #define WF_WINXCFG		22361	/**<		 TODO */
 #define WF_SHADE	    22365	/**<		 TODO (WINX 2.3) */
