--- a/gemlib/mt_gem.h.in
+++ b/gemlib/mt_gem.h.in
@@ -1187,11 +1187,11 @@ typedef  struct
 #define WF_MENU			 33 	/**<         TODO (XaAES) */
 #define WF_WHEEL		 40 	/**<     set window feature on mouse wheel event, see mt_wind_set() */
 #define WF_OPTS			 41		/**< get/set window options. See mt_wind_set() and mt_wind_get() for details. */
-#define WF_CALCF2W		 42	/**< Convert FULL coordinates to WORK coordinates */
-#define WF_CALCW2F		 43	/**< Convert WORK coordinates to FULL coordinates */
-#define WF_CALCF2U		 44	/**< Convert FULL coordinates to USER coordinates */
-#define WF_CALCU2F		 45	/**< Convert USER coordinates to FULL coordinates */
-#define WF_MAXWORKXYWH		 46	/**< Get MAX coordinates for this window - WCOWORK mode only*/
+#define WF_CALCF2W		 42		/**< Convert FULL coordinates to WORK coordinates */
+#define WF_CALCW2F		 43		/**< Convert WORK coordinates to FULL coordinates */
+#define WF_CALCF2U		 44		/**< Convert FULL coordinates to USER coordinates */
+#define WF_CALCU2F		 45		/**< Convert USER coordinates to FULL coordinates */
+#define WF_MAXWORKXYWH	 46		/**< Get MAX coordinates for this window - WCOWORK mode only*/
 #define WF_M_BACKDROP	100 	/**<		 TODO (KAOS 1.4) */
 #define WF_M_OWNER		101 	/**<		 TODO (KAOS 1.4) */
 #define WF_M_WINDLIST	102 	/**<		 TODO (KAOS 1.4) */
@@ -1201,8 +1201,29 @@ typedef  struct
 #define WF_230			230		/**< internally used by MyAES - doc TODO */
 #define WF_231			231		/**< internally used by MyAES - doc TODO */
 #define WF_TOPMOST		232		/**<     set actual window at TOPMOST level, see  mt_wind_set() */
+#define WF_OBFLAG		1001	/**< get/set (doc: TODO) */
+#define WF_OBTYPE		1002	/**< get     (doc: TODO) */
+#define WF_OBSPEC		1003	/**< get/set (doc: TODO) */
+#define X_WF_MENU		4352	/**<     set (doc: TODO) */
+#define X_WF_DIALOG		4608	/**<     set (doc: TODO) */
+#define X_WF_DIALWID	4864	/**<     set (doc: TODO) */
+#define X_WF_DIALHT		5120	/**<     set (doc: TODO) */
+#define X_WF_DFLTDESK	5376	/**<     set (doc: TODO) */
+#define X_WF_MINMAX		5632	/**< get/set (doc: TODO) */
+#define X_WF_HSPLIT		5888	/**< get/set (doc: TODO) */
+#define X_WF_VSPLIT		6144	/**< get/set (doc: TODO) */
+#define X_WF_SPLMIN		6400	/**< get/set (doc: TODO) */
+#define X_WF_HSLIDE2	6656	/**< get/set (doc: TODO) */
+#define X_WF_VSLIDE2	6144	/**< get/set (doc: TODO) */
+#define X_WF_HSLSIZE2	7168	/**< get/set (doc: TODO) */
+#define X_WF_VSLSIZE2	7424	/**< get/set (doc: TODO) */
+#define X_WF_DIALFLGS	7680	/**< get/set (doc: TODO) */
+#define X_WF_OBJHAND	7936	/**< get/set (doc: TODO) */
+#define X_WF_DIALEDIT	9182	/**< get/set (doc: TODO) */
+#define X_WF_DCOLSTAT	8448	/**< get/set (doc: TODO) */
 #define WF_WINX			22360	/**<		 TODO */
 #define WF_WINXCFG		22361	/**<		 TODO */
+#define WF_DDELAY		22362	/**<		 TODO */
 #define WF_SHADE	    22365	/**<		 TODO (WINX 2.3) */
 #define WF_STACK		22366	/**<		 TODO (WINX 2.3) */
 #define WF_TOPALL		22367	/**<		 TODO (WINX 2.3) */
