Build fixes for later GCC's.
This removes -fwritable-strings. The code should be fixed.

--- a/cflib/Makefile.objs
+++ b/cflib/Makefile.objs
@@ -19,7 +19,7 @@ include $(srcdir)/VERSION
 all-here: objs
 
 # default overwrites
-DEFINITIONS = -fwritable-strings
+DEFINITIONS =
 
 ifeq ($(TARGET),16)
 GENERAL += -mshort
