--- a/gemlib/Makefile.objs
+++ b/gemlib/Makefile.objs
@@ -25,6 +25,14 @@ ifeq ($(TARGET),16)
 GENERAL += -mshort
 endif
 
+ifeq ($(TARGET),020)
+GENERAL += -m68020-60
+endif
+
+ifeq ($(TARGET),v4e)
+GENERAL += -mcpu=5475
+endif
+
 # default definitions
 OBJS = $(COBJS:.c=.o) $(SOBJS:.S=.o)
 
