--- a/gemlib/Makefile.objs
+++ b/gemlib/Makefile.objs
@@ -29,8 +29,16 @@ ifeq ($(TARGET),020)
 GENERAL += -m68020-60
 endif
 
+ifeq ($(TARGET),02016)
+GENERAL += -m68020-60 -mshort
+endif
+
 ifeq ($(TARGET),v4e)
 GENERAL += -mcpu=5475
+endif
+
+ifeq ($(TARGET),v4e16)
+GENERAL += -mcpu=5475 -mshort
 endif
 
 # default definitions
