Add 020 library option.
Contributed by Miro Kropacek

--- a/cflib/Makefile.objs
+++ b/cflib/Makefile.objs
@@ -25,6 +25,10 @@ ifeq ($(TARGET),16)
 GENERAL += -mshort
 endif
 
+ifeq ($(TARGET),020)
+GENERAL += -m68020-60
+endif
+
 # default definitions
 OBJS = $(COBJS:.c=.o) $(SOBJS:.s=.o)
 
