--- a/gemma/Makefile
+++ b/gemma/Makefile
@@ -30,7 +30,9 @@ install:
 	install -m 644 include/slb/gemma-struct.h ${PREFIX}/include/slb
 	install -m 644 include/slb/kernel.h ${PREFIX}/include/slb
 	install -m 644 libgemma/libgemma.a ${PREFIX}/lib
-	install -m 644 libgemma/libgemma020.a ${PREFIX}/lib/m68020-60
+ifeq ($(WITH_020_LIB),yes)
+	install -m 644 libgemma/libgemma020.a ${PREFIX}/lib/m68020-60/libgemma.a
+endif
 	install -m 755 src/gemma32.slb ${PREFIX}/local/lib/slb
 	install -m 755 kernel32.slb ${PREFIX}/local/lib/slb
 
@@ -39,6 +41,8 @@ uninstall:
 	rm -f ${PREFIX}/include/slb/gemma.h
 	rm -f ${PREFIX}/include/slb/kernel.h
 	rm -f ${PREFIX}/lib/libgemma.a
-	rm -f ${PREFIX}/lib/m68020-60/libgemma020.a
+ifeq ($(WITH_020_LIB),yes)
+	rm -f ${PREFIX}/lib/m68020-60/libgemma.a
+endif
 	rm -f ${PREFIX}/local/lib/slb/gemma32.slb
 	rm -f ${PREFIX}/local/lib/slb/kernel32.slb
