--- a/cflib/Makefile
+++ b/cflib/Makefile
@@ -23,14 +23,22 @@ all-here: libs
 # default definitions
 GENFILES = .lib* libcflib*.a
 
+ALL_LIBS = normal mshort
 
-libs: normal mshort
+ifeq ($(WITH_020_LIB),yes)
+ALL_LIBS += normal020
+endif
+
+libs: $(ALL_LIBS)
 
 normal:
 	$(MAKE) libcflib.a TARGET=""
 
 mshort:
 	$(MAKE) libcflib16.a TARGET="16"
+	
+normal020:
+	$(MAKE) libcflib020.a TARGET="020"
 
 libcflib$(TARGET).a: objs
 	$(RM) $@
@@ -56,7 +64,11 @@ docu: cflib.stg
 install:
 	install -m 644 cflib.h        ${PREFIX}/include
 	install -m 644 libcflib.a     ${PREFIX}/lib
-	install -m 644 libcflib16.a   ${PREFIX}/lib
+	install -m 644 libcflib16.a   ${PREFIX}/lib/mshort/libcflib.a
+	ln -s mshort/libcflib.a	      ${PREFIX}/lib/libcflib16.a
+ifeq ($(WITH_020_LIB),yes)
+	install -m 644 libcflib020.a  ${PREFIX}/lib/m68020-60/libcflib.a
+endif
 	install -m 644 cflib.hyp      ${PREFIX}/stguide
 	install -m 644 cflib.ref      ${PREFIX}/stguide
 
@@ -64,6 +76,9 @@ uninstall:
 	rm -f ${PREFIX}/include/cflib.h
 	rm -f ${PREFIX}/lib/libcflib.a
 	rm -f ${PREFIX}/lib/libcflib16.a
+	rm -f ${PREFIX}/lib/mshort/libcflib.a
+ifeq ($(WITH_020_LIB),yes)
+	rm -f ${PREFIX}/lib/m68020-60/libcflib.a
+endif
 	rm -f ${PREFIX}/stguide/cflib.hyp
 	rm -f ${PREFIX}/stguide/cflib.ref
-
