Added preprocessor support. Contributed by Vincent Riviere.

--- a/cflib/Makefile.objs
+++ b/cflib/Makefile.objs
@@ -30,7 +30,7 @@ GENERAL += -m68020-60
 endif
 
 # default definitions
-OBJS = $(COBJS:.c=.o) $(SOBJS:.s=.o)
+OBJS = $(COBJS:.c=.o) $(SOBJS:.S=.o)
 
 VPATH = ..
 
